Fixed the horizontal scroll issue
Added cursor pointers to the CTA buttons

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,7 @@ body {
 
 .cta-btn {
   background-color: #EA5455;
+  cursor: pointer;
 }
 
 .content-wrapper {
@@ -392,9 +393,19 @@ h2 {
   font-size: 2rem;
   font-weight: 700;
 }
+@media (min-width: 768px) {
+  h2 {
+    font-size: 2.5rem;
+  }
+}
 
 h3 {
   font-weight: 600;
+}
+@media (min-width: 768px) {
+  h3 {
+    font-size: 1.3rem;
+  }
 }
 
 h4 {
@@ -484,6 +495,13 @@ nav {
   border-radius: 10px;
   border: none;
 }
+@media (min-width: 768px) {
+  .cta-btn {
+    width: 200px;
+    height: 60px;
+    font-size: 18px;
+  }
+}
 
 .hero-image {
   position: absolute;
@@ -499,7 +517,7 @@ nav {
 }
 @media (min-width: 768px) {
   .hero-image {
-    height: 60vh;
+    height: 55vh;
   }
 }
 
@@ -632,8 +650,9 @@ img {
 }
 @media (min-width: 768px) {
   .contact p {
-    width: 70ch;
-    margin: 16px auto;
+    max-width: 60ch;
+    margin: auto;
+    margin-bottom: 16px;
   }
 }
 .contact .content-wrapper {
