--- a/scss/base/_page-styles.scss
+++ b/scss/base/_page-styles.scss
@@ -12,6 +12,7 @@ body {
 
 .cta-btn {
     background-color: $accent-color;
+    cursor: pointer;
 }
 
 .content-wrapper {
