--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -24,10 +24,16 @@
   h2 {
     font-size: 2rem;
     font-weight: 700;
+    @media (min-width: 768px) {
+      font-size: 2.5rem;
+    }
   }
 
   h3 {
     font-weight: 600;
+    @media (min-width: 768px) {
+      font-size: 1.3rem;
+    }
   }
 
   h4 {
